--- a/Views/Propietarios/Create.cshtml
+++ b/Views/Propietarios/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Alta Propietarios</h1>
 
 <h4>Propietario</h4>
 <hr />
@@ -49,13 +49,13 @@
                 <span asp-validation-for="Nacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Generar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">VOLVER</a>
 </div>
 
