--- a/Views/Propietarios/Delete.cshtml
+++ b/Views/Propietarios/Delete.cshtml
@@ -63,6 +63,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">VOLVER</a>
     </form>
 </div>
