--- a/Views/Propietarios/Index.cshtml
+++ b/Views/Propietarios/Index.cshtml
@@ -65,9 +65,9 @@
                 @Html.DisplayFor(modelItem => item.Nacimiento)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
