--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Create">Alta Propietario</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Index">Lista Inquilinos</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Create">Alta Inquilinos</a>
+                        </li>
                         
                     </ul>
                 </div>
