inquilino y propietario, falta estilo

--- a/Views/Inquilinos/Delete.cshtml
+++ b/Views/Inquilinos/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Inmobiliaria.Net.Models.Propietario
+@model Inmobiliaria.Net.Models.Inquilino
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Esta seguro de eliminar el siguiente registro?</h3>
 <div>
-    <h4>Propietario</h4>
+    <h4>Inquilino</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
