--- a/Views/Inquilinos/Index.cshtml
+++ b/Views/Inquilinos/Index.cshtml
@@ -1,16 +1,16 @@
-@model IEnumerable<Inmobiliaria.Net.Models.Propietario>
+@model IEnumerable<Inmobiliaria.Net.Models.Inquilino>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>PROPIETARIOS</h1>
+<h1>INQUILINOS</h1>
 
 
 <table class="table">
     <thead>
         <tr>
-        
+           
             <th>
                 @Html.DisplayNameFor(model => model.Dni)
             </th>
@@ -23,8 +23,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Telefono)
             </th>
-            
-          
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -43,6 +44,10 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Telefono)
+            </td>
+            
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
            
             <td>
