--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Create">Alta Inquilinos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index">Lista Inmuebles</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a>
+                        </li>
                         
                     </ul>
                 </div>
