--- a/Views/Inmuebles/Create.cshtml
+++ b/Views/Inmuebles/Create.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Create";
      var props = (IList<Propietario>) ViewBag.props;
+        var tipos = (IList<Tipo>) ViewBag.tipos;
+    var usos = (IList<Uso>) ViewBag.usos;
 }
 
 <h1>Alta Inmueble</h1>
@@ -19,14 +21,26 @@
                 <input asp-for="Direccion" class="form-control"  required/>
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Uso" class="control-label"></label>
-                <input asp-for="Uso" class="form-control"  required/>
+             <div class="form-group">
+                <label class="control-label">Usos</label>
+             <select class="form-control" name="Uso">
+                 @foreach (var item in usos)
+                {
+                    @:<option value="@item.Id" >@item.UsoInm</option>
+                }
+                </select>
                 <span asp-validation-for="Uso" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control"  required/>
+                <label class="control-label">Tipo</label>
+                
+                <select class="form-control" name="Tipo">
+                 @foreach (var item in tipos)
+                {
+                    @:<option value="@item.Id" >@item.TipoInm</option>
+                }
+                </select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
