--- a/Views/Inmuebles/Details.cshtml
+++ b/Views/Inmuebles/Details.cshtml
@@ -2,6 +2,17 @@
 
 @{
     ViewData["Title"] = "Details";
+     var tipos = (IList<Tipo>) ViewBag.tipos;
+    var usos = (IList<Uso>) ViewBag.usos;
+    Dictionary<int?, String?> tiposMap = new Dictionary<int?, String?>();
+    foreach (var item in tipos){
+        tiposMap.Add(item.Id, item.TipoInm);
+
+    }
+    Dictionary<int?, String?> usosMAp = new Dictionary<int?, String?>();
+    foreach (var item in usos){
+        usosMAp.Add(item.Id, item.UsoInm);
+    }
 }
 
 <h1>Detalles de Inmueble</h1>
@@ -26,7 +37,7 @@
             @Html.DisplayNameFor(model => model.Uso)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Uso)
+            @Html.DisplayFor(@:usos[model.Uso])
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
