--- a/Views/Inmuebles/Edit.cshtml
+++ b/Views/Inmuebles/Edit.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Edit";
     var props = (IList<Propietario>) ViewBag.props;
     var tipos = (IList<Tipo>) ViewBag.tipos;
+    var usos = (IList<Uso>) ViewBag.usos;
 }
 <h1>EDICION</h1>
 
@@ -24,8 +25,14 @@
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Uso" class="control-label"></label>
-                <input asp-for="Uso" class="form-control"/>
+                <label class="control-label">Uso</label>
+                
+                <select class="form-control" name="Uso">
+                 @foreach (var item in usos)
+                {
+                    @:<option value="@item.Id" @(item.Id==Model.Uso?"selected" :"") >@item.UsoInm</option>
+                }
+                </select>
                 <span asp-validation-for="Uso" class="text-danger"></span>
             </div>
 
