--- a/Views/Inmuebles/Delete.cshtml
+++ b/Views/Inmuebles/Delete.cshtml
@@ -2,6 +2,17 @@
 
 @{
     ViewData["Title"] = "Delete";
+    var tipos = (IList<Tipo>) ViewBag.tipos;
+    var usos = (IList<Uso>) ViewBag.usos;
+    Dictionary<int?, String?> tiposMap = new Dictionary<int?, String?>();
+    foreach (var item in tipos){
+        tiposMap.Add(item.Id, item.TipoInm);
+
+    }
+    Dictionary<int?, String?> usosMAp = new Dictionary<int?, String?>();
+    foreach (var item in usos){
+        usosMAp.Add(item.Id, item.UsoInm);
+    }
 }
 
 <h1>Borrar</h1>
@@ -21,13 +32,13 @@
             @Html.DisplayNameFor(model => model.Uso)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Uso)
+            @usosMAp[(int)Model.Uso]
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
+            @tiposMap[(int)Model.Tipo]
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CantidadDeAmbientes)
@@ -63,7 +74,7 @@
             @Html.DisplayNameFor(model => model.PropietarioId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PropietarioId)
+             @(Model.Duenio.Nombre + " " + Model.Duenio.Apellido)
         </dd>
         
     </dl>
