--- a/Views/Inmuebles/Details.cshtml
+++ b/Views/Inmuebles/Details.cshtml
@@ -37,13 +37,13 @@
             @Html.DisplayNameFor(model => model.Uso)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(@:usos[model.Uso])
+            @usosMAp[(int)Model.Uso]
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
+            @tiposMap[(int)Model.Tipo]
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CantidadDeAmbientes)
@@ -79,7 +79,7 @@
             @Html.DisplayNameFor(model => model.PropietarioId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PropietarioId)
+             @(Model.Duenio.Nombre + " " + Model.Duenio.Apellido)
         </dd>
     </dl>
 </div>
