CRUD contrato sin validacion de fechas

--- a/Views/Inmuebles/Create.cshtml
+++ b/Views/Inmuebles/Create.cshtml
@@ -73,12 +73,22 @@
             </div>
 
             <div class="form-group">
-                <label  class="control-label"></label>
+                <label  class="control-label">Propietario</label>
                 <select class="form-control" name="PropietarioId">
                 @foreach (var item in props)
                 {
-                    <option value="@item.Id" selected>@item.ToString()</option>
+                    <option value="@item.Id">@item.ToString()</option>
                 }
+                </select>
+                <span asp-validation-for="PropietarioId" class="text-danger"></span>
+            </div>
+              <div class="form-group">
+                <label  class="control-label">Disponible</label>
+                <select class="form-control" name="PropietarioId">
+                
+                    <option value="true">Disponible</option>
+                    <option value="false">No Disponible</option>
+                
                 </select>
                 <span asp-validation-for="PropietarioId" class="text-danger"></span>
             </div>
