--- a/Views/Inmuebles/Index.cshtml
+++ b/Views/Inmuebles/Index.cshtml
@@ -43,7 +43,9 @@
              <th>
                 @Html.DisplayNameFor(model => model.PropietarioId)
             </th>
-             
+              <th>
+                @Html.DisplayNameFor(model => model.Disponible)
+            </th>
           
             
           
@@ -74,8 +76,12 @@
             </td>
              <td>
                 @(item.Duenio.Nombre + " " + item.Duenio.Apellido)
-            
-           
+            </td>
+            <td>
+                @(item.Disponible? "Disponible" : "No Disponible")
+            </td>
+
+
             <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
