--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,12 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Index">Lista Contratos</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Create">Alta Contrato</a>
+                        </li>
                         
                     </ul>
                 </div>
