--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Vigentes">Contratos Vigentes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Index">Lista Contratos</a>
                         </li>
                           <li class="nav-item">
