--- a/Views/Pagos/Index.cshtml
+++ b/Views/Pagos/Index.cshtml
@@ -25,7 +25,9 @@
               <th>
                 @Html.DisplayNameFor(model => model.FechaPago)
             </th>
-            
+            <th>
+                Pagar
+            </th>
           
             <th></th>
         </tr>
@@ -50,13 +52,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaPago)
             </td>
-          
-            
+            <td>
+                    <form asp-action="Pagar" method="post">
+                <input type="number" name="Id" value="@item.Id" hidden>
+                
+                
+                <input type="submit" value="Pagar">
+             </form>
+            </td>
            
+     
             <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
+              
             </td>
         </tr>
 }
