--- a/Views/Pagos/Index.cshtml
+++ b/Views/Pagos/Index.cshtml
@@ -55,6 +55,7 @@
             <td>
                     <form asp-action="Pagar" method="post">
                 <input type="number" name="Id" value="@item.Id" hidden>
+                <input type="number" name="ContratoId" value="@item.ContratoId" hidden>
                 
                 
                 <input type="submit" value="Pagar">
