--- a/Views/Contratos/Vencidos.cshtml
+++ b/Views/Contratos/Vencidos.cshtml
@@ -2,7 +2,7 @@
 
 
 
-<h1>Contratos</h1>
+<h1>Contratos Vencidos</h1>
 
 
 <table class="table">
@@ -12,7 +12,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
-           <th>
+            <th>
                 <b>Inmueble</b> 
             </th>
             <th>
@@ -27,11 +27,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.MontoMensual)
             </th>
-             
-              <th>
+            
+            <th>
                 <b>Pagos</b>
 
             </th>
+             
+            
           
             <th></th>
         </tr>
@@ -43,7 +45,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
-           <td>
+            <td>
                 @item.inmueble.ToString()
             </td>
             <td>
@@ -59,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.MontoMensual)
             </td>
            
-              <td>
+           <td>
             
              @Html.ActionLink("Pagos",  "Index", "Pagos",new { id = item.Id }, null) 
            
@@ -67,7 +69,7 @@
             
            
             <td>
-                @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
+                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id })
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
             </td>
