--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,11 +46,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Vigentes">Contratos Vigentes</a>
                         </li>
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Vencidos">Contratos Vencidos</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Index">Lista Contratos</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Create">Alta Contrato</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Create">Alta Pago</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Index">Pagos</a>
                         </li>
                         
                     </ul>
