--- a/Views/Pagos/Edit.cshtml
+++ b/Views/Pagos/Edit.cshtml
@@ -1,65 +1,51 @@
-@model Inmobiliaria.Net.Models.Contrato
+@model Inmobiliaria.Net.Models.Pago
 
 @{
     ViewData["Title"] = "Edit";
-    var Inms = (IList<Inmueble>) ViewBag.inmuebles;
-    var inqs = (IList<Inquilino>) ViewBag.inquilinos;
+    var conts = (IList<Contrato>) ViewBag.contratos;
 }
 <h1>EDICION</h1>
 
-<h4>Contrato</h4>
+<h4>Pago</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label class="control-label">Pago</label>
+                <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" readonly />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
-
-            <div class="form-group">
-                <label class="control-label">Inmueble</label>
-                
-                <select class="form-control" name="InmuebleId">
-                 @foreach (var item in Inms)
+                <select class="form-control" name="ContratoId">
+                 @foreach (var item in conts)
                 {
-                    @:<option value="@item.Id" @(item.Id==Model.InmuebleId?"selected" :"") >@item.ToString()</option>
+                    @:<option value="@item.Id" @(item.Id==Model.ContratoId?"selected" :"")>@item.ToString()</option>
                 }
                 </select>
-                <span asp-validation-for="InmuebleId" class="text-danger"></span>
+                <span asp-validation-for="ContratoId" class="text-danger"></span>
             </div>
             
+
             <div class="form-group">
-                <label class="control-label">Inquilino</label>
-                
-                <select class="form-control" name="InquilinoId">
-                 @foreach (var item in inqs)
-                {
-                    @:<option value="@item.Id" @(item.Id==Model.InquilinoId?"selected" :"") >@item.ToString()</option>
-                }
-                </select>
-                <span asp-validation-for="InquilinoId" class="text-danger"></span>
+                <label asp-for="Periodo" class="control-label"></label>
+                <input asp-for="Periodo" class="form-control" required/>
+                <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label"></label>
-                <input asp-for="FechaInicio" class="form-control" required/>
-                <span asp-validation-for="FechaInicio" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="FechaFinal" class="control-label"></label>
-                <input asp-for="FechaFinal" class="form-control" required/>
-                <span asp-validation-for="FechaFinal" class="text-danger"></span>
+                <label asp-for="FechaPago" class="control-label"></label>
+                <input asp-for="FechaPago"  class="form-control" required/>
+                <span asp-validation-for="FechaPago" class="text-danger"></span>
             </div>
 
 
             <div class="form-group">
-                <label asp-for="MontoMensual" class="control-label"></label>
-                <input asp-for="MontoMensual" class="form-control" required/>
-                <span asp-validation-for="MontoMensual" class="text-danger"></span>
+                <label asp-for="Monto" class="control-label"></label>
+                <input asp-for="Monto" class="form-control" required/>
+                <span asp-validation-for="Monto" class="text-danger"></span>
             </div>
            
          
