--- a/Views/Contratos/Renovar.cshtml
+++ b/Views/Contratos/Renovar.cshtml
@@ -2,16 +2,13 @@
 
 @{
     ViewData["Title"] = "Edit";
-    
-    var mensaje = ViewBag.mensaje;
-     var Inms = (IList<Inmueble>) ViewBag.inmuebles;
+    var Inms = (IList<Inmueble>) ViewBag.inmuebles;
     var inqs = (IList<Inquilino>) ViewBag.inquilinos;
     
 }
 <h1>Alta Contrato</h1>
 
 <h4>Contrato</h4>
-<h5>@mensaje</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,7 +22,7 @@
                 <select class="form-control" name="InmuebleId">
                  @foreach (var item in Inms)
                 {
-                    @:<option value="@item.Id" @(item.Id==Model.InmuebleId?"selected" :"")>@item.ToString()</option>
+                    @:<option value="@item.Id">@item.ToString()</option>
                 }
                 </select>
                 <span asp-validation-for="InmuebleId" class="text-danger"></span>
@@ -37,7 +34,7 @@
                 <select class="form-control" name="InquilinoId">
                  @foreach (var item in inqs)
                 {
-                    @:<option value="@item.Id" @(item.Id==Model.InquilinoId?"selected" :"")>@item.ToString()</option>
+                    @:<option value="@item.Id" >@item.ToString()</option>
                 }
                 </select>
                 <span asp-validation-for="InquilinoId" class="text-danger"></span>
@@ -53,12 +50,13 @@
                 <label asp-for="FechaFinal" class="control-label"></label>
                 <input asp-for="FechaFinal" class="form-control" required/>
                 <span asp-validation-for="FechaFinal" class="text-danger"></span>
+                
             </div>
 
 
             <div class="form-group">
                 <label asp-for="MontoMensual" class="control-label"></label>
-                <input asp-for="MontoMensual"  class="form-control" required/>
+                <input asp-for="MontoMensual" class="form-control" required/>
                 <span asp-validation-for="MontoMensual" class="text-danger"></span>
             </div>
            
