--- a/Views/Contratos/Vencidos.cshtml
+++ b/Views/Contratos/Vencidos.cshtml
@@ -69,6 +69,7 @@
             
            
             <td>
+                @Html.ActionLink("Renovar", "Renovar", new {  contrato =item }) |
                  @Html.ActionLink("Editar", "Edit", new {  id=item.Id })
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
