--- a/Views/Propietarios/Create.cshtml
+++ b/Views/Propietarios/Create.cshtml
@@ -15,7 +15,7 @@
            
             <div class="form-group">
                 <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" pattern="^\d{7,8}$" required/>
+                <input asp-for="Dni"  class="form-control" pattern="^\d{7,8}$" required/>
                 <span asp-validation-for="Dni" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control"  required/>
+                <input asp-for="Telefono" type="number" class="form-control"  required/>
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
             <div class="form-group">
