--- a/Views/Contratos/Vigentes.cshtml
+++ b/Views/Contratos/Vigentes.cshtml
@@ -68,7 +68,7 @@
            </td>
            
             <td>
-                @Html.ActionLink("Renovar", "Renovar", new {  contrato =item }) |
+                @Html.ActionLink("Renovar", "Renovar", new {  contrato =(Contrato) item }) |
                  @Html.ActionLink("Editar", "Edit", new {  id=item.Id })
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
