--- a/Views/Propietarios/Create.cshtml
+++ b/Views/Propietarios/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" type="number" class="form-control"  required/>
+                <input asp-for="Telefono" class="form-control"  required/>
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
             <div class="form-group">
