--- a/Views/Contratos/Index.cshtml
+++ b/Views/Contratos/Index.cshtml
@@ -67,7 +67,7 @@
             
            
             <td>
-                 @Html.ActionLink("Renovar", "Renovar", new {  contrato =item }) |
+                 @Html.ActionLink("Renovar", "Renovar", new {  id = item.Id }) |
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
