--- a/Views/Contratos/Vigentes.cshtml
+++ b/Views/Contratos/Vigentes.cshtml
@@ -68,8 +68,8 @@
            </td>
            
             <td>
-                @Html.ActionLink("Renovar", "Renovar", new {  contrato =(Contrato) item }) |
-                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id })
+                @Html.ActionLink("Renovar", "Renovar", new {  id = item.Id }) |
+                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id })|
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
             </td>
