--- a/Views/Usuarios/Perfil.cshtml
+++ b/Views/Usuarios/Perfil.cshtml
@@ -1,10 +1,10 @@
-@model Inmobiliaria.Net.Models.Propietario
+@model Inmobiliaria.Net.Models.Usuario
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalles de Propietario</h1>
+<h1>Perfil de Usuario</h1>
 
 <div>
     <h4>Propietario</h4>
@@ -16,12 +16,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Dni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dni)
-        </dd>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -34,17 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Apellido)
         </dd>
+        
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
+            @Html.DisplayNameFor(model => model.Rol)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Direccion)
+            @Html.DisplayFor(model => model.RolNombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
@@ -53,10 +43,17 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nacimiento)
+            @Html.DisplayNameFor(model => model.Avatar)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nacimiento)
+            @if (Model.Avatar != null)
+				{
+					<img src="@Model.Avatar" />
+				}
+				else
+				{
+					<p>Sin avatar</p>
+				}
         </dd>
     </dl>
 </div>
