--- a/Views/Propietarios/Details.cshtml
+++ b/Views/Propietarios/Details.cshtml
@@ -62,6 +62,9 @@
 </div>
 <div>
     @Html.ActionLink("EDITAR", "Edit", new {  id = Model.Id}) |
-    @Html.ActionLink("BORRAR", "Delete", new { id = Model.Id }) |
-    <a asp-action="Index">VOLVER</a>
+   
+    <a asp-action="Index">VOLVER</a> |
+      @if(User.IsInRole("Administrador")){
+    @Html.ActionLink("BORRAR", "Delete", new { id = Model.Id }) 
+     }
 </div>
