--- a/Views/Inmuebles/Details.cshtml
+++ b/Views/Inmuebles/Details.cshtml
@@ -91,6 +91,10 @@
 </div>
 <div>
     @Html.ActionLink("EDITAR", "Edit", new {  id = Model.Id}) |
-    @Html.ActionLink("BORRAR", "Delete", new { id = Model.Id }) |
-    <a asp-action="Index">VOLVER</a>
+    <a asp-action="Index">VOLVER</a> | 
+    @if (User.IsInRole("Administrador"))
+    {
+          @Html.ActionLink("BORRAR", "Delete", new { id = Model.Id })
+    }
+    
 </div>
