--- a/Views/Inquilinos/Index.cshtml
+++ b/Views/Inquilinos/Index.cshtml
@@ -53,7 +53,10 @@
             <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
+                @if (User.IsInRole("Administrador"))
+                {
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
+                }
             </td>
         </tr>
 }
