--- a/Views/Pagos/Create.cshtml
+++ b/Views/Pagos/Create.cshtml
@@ -5,9 +5,8 @@
     var conts = (IList<Contrato>) ViewBag.contratos;
     
 }
-<h1>Alta Pago</h1>
+<h1>Nuevo Pago</h1>
 
-<h4>Pagar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,13 +29,13 @@
 
             <div class="form-group">
                 <label asp-for="Periodo" class="control-label"></label>
-                <input asp-for="Periodo" class="form-control" required/>
+                <input asp-for="Periodo" type="Month" value="@DateTime.Now.ToString("yyyy-MM")" class="form-control" required/>
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="FechaPago" class="control-label"></label>
-                <input asp-for="FechaPago"  class="form-control" required/>
+                <input asp-for="FechaPago" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="form-control" required/>
                 <span asp-validation-for="FechaPago" class="text-danger"></span>
             </div>
 
