--- a/Views/Propietarios/Index.cshtml
+++ b/Views/Propietarios/Index.cshtml
@@ -48,7 +48,9 @@
             <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
+                 @if(User.IsInRole("Administrador")){
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
+                 }
             </td>
         </tr>
 }
