--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,78 +9,106 @@
     <link rel="stylesheet" href="~/Inmobiliaria.Net.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria.Net</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Index">Lista Propietarios</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Create">Alta Propietario</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Index">Lista Inquilinos</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Create">Alta Inquilinos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index">Lista Inmuebles</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Vigentes">Contratos Vigentes</a>
-                        </li>
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Vencidos">Contratos Vencidos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Index">Lista Contratos</a>
-                        </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Create">Alta Contrato</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Create">Alta Pago</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Index">Pagos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Perfil">Perfil</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Logout">Logout</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Login">Login</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Create">Alta</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Index</a>
-                        </li>
-                        
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <div class="container-fluid">
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria.Net</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                @if(User.Identity.IsAuthenticated){
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Propietarios" asp-action="Index" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Propietarios
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Propietarios" asp-action="Index">Lista Propietarios</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Propietarios" asp-action="Create">Alta Propietario</a></li>
                     </ul>
-                </div>
-            </div>
-        </nav>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Index" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Inquilinos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Inquilinos" asp-action="Index">Lista Inquilinos</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Inquilinos" asp-action="Create">Alta Inquilino</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Inmuebles
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Inmuebles" asp-action="Index">Lista Inmuebles</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Contratos" asp-action="Index" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Contratos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Contratos" asp-action="Vigentes">Contratos Vigentes</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Contratos" asp-action="Vencidos">Contratos Vencidos</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Contratos" asp-action="Index">Lista Contratos</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Contratos" asp-action="Create">Alta Contrato</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Pagos" asp-action="Index" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Pagos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                  <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Index">Pagos</a></li>
+                <li><a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Create">Alta Pago</a></li>
+                    </ul>
+                </li>
+
+               
+
+                @if(User.IsInRole("Administrador")){
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" asp-area="" asp-controller="Usuarios" asp-action="Perfil" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Usuarios
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown5">
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Usuarios" asp-action="Create">Alta</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Usuarios" asp-action="Index">Index</a></li>
+                    </ul>
+                </li>
+                }
+                }
+                    </div>
+                    <div class="d-sm-inline-flex">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            
+                       
+                        <a class="dropdown-item " asp-area="" asp-controller="Usuarios"  style="margin-right: 0;" asp-action="Perfil">Perfil</a>
+                        
+                        <a class="dropdown-item " asp-area="" asp-controller="Usuarios" style="margin-right: 70px;" asp-action="Logout">Logout</a>
+                        }else{
+                            <a class="dropdown-item " asp-area="" asp-controller="Usuarios" style="margin-right: 0;" asp-action="Login">Login</a>
+                        }
+                        
+                    </div>
+            </ul>
+        </div>
+    </div>
+</nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
