--- a/Views/Usuarios/Create.cshtml
+++ b/Views/Usuarios/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Alta de Usuario</h1>
 
-<h4>Usuario</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,7 +33,7 @@
 				<span asp-validation-for="Clave" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<label asp-for="AvatarFile" class="control-label"></label>
+				<label asp-for="AvatarFile" class="control-label">Avatar</label><br>
 				<input type="file" name="AvatarFile" />
 				<span asp-validation-for="AvatarFile" class="text-danger"></span>
 			</div>
