--- a/Views/Usuarios/Perfil.cshtml
+++ b/Views/Usuarios/Perfil.cshtml
@@ -7,58 +7,60 @@
 <h1>Perfil de Usuario</h1>
 
 <div>
-    <h4>Propietario</h4>
+   
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
         
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RolNombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Avatar)
-        </dt>
-        <dd class = "col-sm-10">
-            @if (Model.Avatar != null)
-				{
-					<img src="@Model.Avatar" />
-				}
-				else
-				{
-					<p>Sin avatar</p>
-				}
-        </dd>
-    </dl>
+        <div class="row">
+  <div class="col-sm-4">
+    <div class="row">
+      <div class="col-sm-12">
+        <dt>@Html.DisplayNameFor(model => model.Nombre)</dt>
+        <dd>@Html.DisplayFor(model => model.Nombre)</dd>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <dt>@Html.DisplayNameFor(model => model.Apellido)</dt>
+        <dd>@Html.DisplayFor(model => model.Apellido)</dd>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="row">
+      <div class="col-sm-12">
+        <dt>@Html.DisplayNameFor(model => model.Rol)</dt>
+        <dd>@Html.DisplayFor(model => model.RolNombre)</dd>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <dt>@Html.DisplayNameFor(model => model.Email)</dt>
+        <dd>@Html.DisplayFor(model => model.Email)</dd>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="row">
+     
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        @if (Model.Avatar != null)
+        {
+          <img src="@Model.Avatar" />
+        }
+        else
+        {
+          <img src="~/Uploads/avatar_0.png" />
+        }
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 <div>
     @Html.ActionLink("EDITAR", "Edit", new {  id = Model.Id}) |
-    @Html.ActionLink("BORRAR", "Delete", new { id = Model.Id }) |
-    <a asp-action="Index">VOLVER</a>
+    
 </div>
