--- a/Views/Usuarios/Edit.cshtml
+++ b/Views/Usuarios/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-	ViewBag.Roles = Usuario.ObtenerRoles();
+	String mensaje = TempData["error"] as String;
 	
 }
 
@@ -103,7 +103,9 @@
 				<input type="submit" value="Guardar Cambios" class="btn btn-primary" />
 			</div>
 	</form>
-			
+			<div>
+         <p>@mensaje</p>
+      </div>
 		</div>
 
 
